apps/ingress/backend-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-httpd
  template:
    metadata:
      labels:
        app: backend-httpd
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-httpd
spec:
  selector:
    app: backend-httpd
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
