apps/ingress/backend-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-nginx
  template:
    metadata:
      labels:
        app: backend-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.30
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-nginx
spec:
  selector:
    app: backend-nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
