apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # 後で説明
  name: ing-multipath
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: backend-nginx
            port:
              number: 80
        path: /nginx
        pathType: Exact
      - backend:
          service:
            name: backend-httpd
            port:
              number: 80
        path: /httpd
        pathType: Exact
